--- a/Src/VSIXTemplates/VSIXTemplates.csproj
+++ b/Src/VSIXTemplates/VSIXTemplates.csproj
@@ -95,6 +95,11 @@
       <HintPath>..\..\packages\TemplateBuilder.1.0.3.47-beta\lib\TemplateBuilder.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <TemplateReference Include="RoundTripVSIX.csproj">
+      <PathToProject>../RoundTripVSIX/RoundTripVSIX.csproj</PathToProject>
+    </TemplateReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(TemplateBuilderTargets)" Condition="Exists('$(TemplateBuilderTargets)')" Label="TemplateBuilder" />
