--- a/Src/VSIXTemplates/VSIXTemplates.csproj
+++ b/Src/VSIXTemplates/VSIXTemplates.csproj
@@ -99,6 +99,15 @@
     <TemplateReference Include="RoundTripVSIX.csproj">
       <PathToProject>../RoundTripVSIX/RoundTripVSIX.csproj</PathToProject>
     </TemplateReference>
+    <TemplateReference Include="RoundTripVSIX2012.csproj">
+      <PathToProject>../RoundTripVSIX2012/RoundTripVSIX2012.csproj</PathToProject>
+    </TemplateReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="License.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
